<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_reset_password"
    tools:context=".activities.ResetPasswordActivity">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_67sdp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="43dp"
        android:text="@string/tvSubtitleForgotPassword"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Button
        android:id="@+id/btnResetPassord"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="138dp"
        android:background="@drawable/btn_shape"
        android:text="@string/btnForgotPasswordTxt"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etResetPwEmail" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_93sdp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="@dimen/_240sdp"
        android:layout_marginEnd="105dp"
        android:fontFamily="sans-serif"
        android:text="@string/tvTitleForgotPassword"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etResetPwEmail"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/et_style"
        android:drawableLeft="@drawable/ic_message"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/phEmail"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="348dp"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>



