<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/firstPhoto"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_300sdp"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/firstIntroTitle"
        android:layout_width="354dp"
        android:layout_height="80dp"
        android:layout_marginStart="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_45sdp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:text="@string/first_intro_title"
        android:textColor="@color/colorText"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        app:fontFamily="@font/arlrdbd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstPhoto" />

    <TextView
        android:id="@+id/firstIntroText"
        android:layout_width="335dp"
        android:layout_height="55dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="@dimen/_13sdp"
        android:layout_marginEnd="33dp"
        android:gravity="center_horizontal"
        android:text="@string/first_intro_text"
        android:textColor="@color/colorText"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstIntroTitle" />

    <Button
        android:id="@+id/contiueBtn"
        android:layout_width="@dimen/_222sdp"
        android:layout_height="@dimen/_46sdp"
        android:layout_marginStart="@dimen/_92sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_92sdp"
        android:background="@drawable/btn_shape"
        android:text="@string/continueBtn"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstIntroText" />

    <ImageView
        android:id="@+id/indOne"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_24sdp"
        app:layout_constraintEnd_toStartOf="@+id/indtwo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contiueBtn"
        app:srcCompat="@drawable/selected" />

    <ImageView
        android:id="@+id/indtwo"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="@+id/indOne"
        app:layout_constraintEnd_toStartOf="@+id/indThree"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/indOne"
        app:layout_constraintTop_toTopOf="@+id/indOne"
        app:srcCompat="@drawable/selected" />

    <ImageView
        android:id="@+id/indThree"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="@+id/indtwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/indtwo"
        app:layout_constraintTop_toTopOf="@+id/indtwo"
        app:srcCompat="@drawable/selected" />

</androidx.constraintlayout.widget.ConstraintLayout>